Make ERB build on actions runners
For some reason, I'm getting errors on actions when I use `-%>` in ERB.

--- a/site/views/layout.erb
+++ b/site/views/layout.erb
@@ -29,7 +29,11 @@
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <% league.divisions.each do |division| %>
-                      <li><a class="dropdown-item" href="<%= standings_link(division) %>%"><%= division.name -%> Standings</a></li>
+                      <li>
+                        <a class="dropdown-item" href="<%= standings_link(division) %>">
+                          <%= division.name %> Standings
+                        </a>
+                      </li>
                     <% end %>
                   </ul>
                 </li>
