--- a/site/views/standings.erb
+++ b/site/views/standings.erb
@@ -1,7 +1,10 @@
-<h1><%= division.name -%> Division Standings</h1>
+<h1><%= division.name %> Division Standings</h1>
 
 <% division.conferences.each do |conference| %>
-<h2><%= conference.name -%> Conference</h2>
+
+<% if division.conferences.size > 1 %>
+<h2><%= conference.name %> Conference</h2>
+<% end %>
 
 <table class="table table-striped table-hover table-responsive table-standings">
   <thead>
@@ -17,12 +20,12 @@
   <tbody>
     <% conference.sorted_teams.each do |team| %>
       <tr>
-        <td><%= team.name -%></td>
-        <td><%= team.record.wins_losses_ties -%></td>
-        <td><%= team.record.runs_allowed_average -%></td>
-        <td><%= team.record.runs_scored_average -%></td>
-        <td><%= team.record.run_differential -%></td>
-        <td><%= team.record.points -%></td>
+        <td><%= team.name %></td>
+        <td><%= team.record.wins_losses_ties %></td>
+        <td><%= team.record.runs_allowed_average %></td>
+        <td><%= team.record.runs_scored_average %></td>
+        <td><%= team.record.run_differential %></td>
+        <td><%= team.record.points %></td>
       </tr>
     <% end %>
   </tbody>
