--- a/site/views/layout.erb
+++ b/site/views/layout.erb
@@ -5,7 +5,7 @@
     <title>Better LTA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link href="/assets/css/better-lta.css" rel="stylesheet">
+    <link href="assets/css/better-lta.css" rel="stylesheet">
   </head>
   <body class="<%= active_page %>">
     <div class="container-fullwidth bg-dark">
@@ -53,6 +53,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tablesort/5.2.1/tablesort.min.js">
-    <script src="/assets/js/better-lta.js"></script>
+    <script src="assets/js/better-lta.js"></script>
   </body>
 </html>
