--- a/site/views/layout.erb
+++ b/site/views/layout.erb
@@ -24,7 +24,7 @@
                   <a class="nav-link <%= active_class("home") %>" href="/">Home</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle <%= active_class("standings") %>" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Standings
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -38,7 +38,7 @@
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link <%= active_class("code") %>" href="https://github.com/derekprior/better-lta">FAQ</a>
+                  <a class="nav-link <%= active_class("code") %>" href="https://github.com/derekprior/better-lta">Code</a>
                 </li>
               </ul>
             </div>
