--- a/site/views/standings.erb
+++ b/site/views/standings.erb
@@ -3,10 +3,10 @@
 <% division.conferences.each do |conference| %>
 
 <% if division.conferences.size > 1 %>
-<h2><%= conference.name %> Conference</h2>
+<h2 class="my-4"><%= conference.name %> Conference</h2>
 <% end %>
 
-<table class="table table-striped table-hover table-responsive table-standings">
+<table class="table table-striped table-hover table-responsive">
   <thead>
     <tr>
       <th data-sort-method="none">Team</th>
